--- a/.github/workflows/GitAction-demo.yaml
+++ b/.github/workflows/GitAction-demo.yaml
@@ -50,7 +50,7 @@ jobs:
       - run: echo "Hello Ubuntu"
   package:
     needs: [build, build-db]
-    runs-on: self-hosted
+    runs-on: macos-latest
     steps:
        - run: echo "Hello Macos"
 
