--- a/.github/workflows/Custom EnvVars.yml
+++ b/.github/workflows/Custom EnvVars.yml
@@ -10,7 +10,7 @@ env:
 jobs:
    mainjob:
       name: 'Print the env vars'
-      runs-on: Ubuntu-latest
+      runs-on: ubuntu-latest
 
     env:
       Greeting: Dear
