--- a/.github/workflows/Set Env Vars.yml
+++ b/.github/workflows/Set Env Vars.yml
@@ -3,7 +3,7 @@ name: 'Custom GITHUB_ENV var Demo'
 on:   workflow_dispatch
 
 jobs:
-   custom GITHUB_ENV car Demo:
+  custom GITHUB_ENV var Demo:
       runs-on: ubuntu-latest
       steps:
       - name: Set the value
