added a secret workflow for demo

--- a/.github/workflows/ActionSecrets.yml
+++ b/.github/workflows/ActionSecrets.yml
@@ -9,7 +9,7 @@ jobs:
       steps:
         - name: Print secret
           run: |
-              echo "MY_TOP_SECRET: ${{ secrtes.MY_TOP_SECRET }}"
+              echo "MY_TOP_SECRET: ${{ secrets.MY_TOP_SECRET }}"
               echo "i_dont_exist: ${{ secrets.i_dont_exist }}"
         
         - name: Print secret as an environment variable
