--- a/.github/workflows/sudo.yaml
+++ b/.github/workflows/sudo.yaml
@@ -14,5 +14,5 @@ jobs:
     - name: Switch to root and install packages
       run: |
         sudo -s <<EOF
-        apt-get update
+        apt-get -y  install netcat
         EOF
